--- a/app/index.html
+++ b/app/index.html
@@ -10,19 +10,9 @@
   </head>
   <body>
     <div class='container'>
-    <h1><span class='left'>TRAM21</span><span class='right'>(C)2019 Johannes Schier</span></h1>
-    <textarea id='input'>
-      # '+' kick
-      # '~' snare
-      # '>' closed high-hat
-      # '<' open high-hat
-      # '*' low tom
-      # '°' high tom
-      # '.' click
-      # '-' pause
-      # '#' to mute a line
-    </textarea>
-    <div class='footer'></div>
+    <h1><span class='left'>TRAM - Typographic Rythm Automation Machine</span><span id="transport"></span></h1>
+    <div id='input' contenteditable=""></div>
+    <div class='footer'><span id="output">Analog Rytm</span><span id="tempo">128BPM</span></div>
     <script src="./js/renderer.js"></script>
   </body>
 </html>
