final update for today

--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <div class='container'>
-    <h1><span class='left'>TRAM - Typographic Rythm Automation Machine</span><span id="transport"></span></h1>
+    <header class='header'><span class='left'>TRAM - Typographic Rythm Automation Machine</span><span id="transport"></span></header>
     <div id='input' contenteditable=""></div>
-    <div class='footer'><span id="output">Analog Rytm</span><span id="tempo">128BPM</span></div>
+    <footer class='footer'><span id="output">Analog Rytm</span><span id="tempo">128BPM</span></footer>
     <script src="./js/renderer.js"></script>
   </body>
 </html>
