terminal version done

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
           O <span id="outputs">No Device [0/0]</span> <span class='shortcut'>[<span id="uiOutPrev">&lt;</span>\<span id="uiOutNext">&gt;</span>]</span>
         </span>
         <span class="center">
-          [<span id="filename" contenteditable spellcheck="false">untitled</span>.tram]
+          [<span id="filename" contenteditable spellcheck="false">haffegroove</span>.tram]
         </span>
         <span class="right">
           <span class='shortcut'>[<span id="uiSlower">-</span>/<span id="uiFaster">+</span>]</span> <span id="tempo">128BPM</span><br class="ui-break">
