update after last performance

--- a/app/index.html
+++ b/app/index.html
@@ -15,10 +15,10 @@
           <span class='shortcut'>[<span id="uiOpen">O</span>/<span id="uiSave">S</span>]</span>
         </span>
         <span class="center">
-          <span class='shortcut'>[<span id="uiHelp">?</span>]</span> <b>TRAM</b> [<span id="operators"></span>] <span class='shortcut'>[<span id="uiIn">I</span>/<span id="uiOut">O</span>]</span> <span id="fontsize" class="detail">16PX</span>
+          <span class='shortcut'>[<span id="uiHelp">?</span>]</span> <b>TRAM</b> <span id="operators"></span> <span class='shortcut'>[<span id="uiOut">O</span>/<span id="uiIn">I</span>]</span> <span id="fontsize" class="detail">16PX</span>
         </span>
         <span class="right">
-          <span id="transportsend" class="detail">send</span> <span id="transportrecieve" class="detail">recieve</span><br class="ui-break">
+          <span class='shortcut'>transport</span> <span id="transportsend" class="detail">send</span> <span id="transportrecieve" class="detail">recieve</span><br class="ui-break">
            <span class='shortcut'>[P/S]</span><span id="transport"></span>
         </span>
       </header>
@@ -36,7 +36,7 @@
         <span class="right">
           <span class='shortcut'>[<span id="uiSlower">-</span>/<span id="uiFaster">+</span>]</span> <span id="tempo">128BPM</span><br class="ui-break">
           <span id="clocksource" class="detail">INT</span> <span id="clocktype" class="detail">24ppq</span> <br class="ui-break">
-           <span id="clocksend" class="detail">send</span> <span id="clockrecieve" class="detail">recieve</span>
+           <span class='shortcut'>clock</span> <span id="clocksend" class="detail">send</span> <span id="clockrecieve" class="detail">recieve</span>
         </span>
       </footer>
     </div>
