--- a/app/map.html
+++ b/app/map.html
@@ -7,6 +7,7 @@
   </head>
   <body class="mapping">
     <div class='container'>
+      <h1 id="info">[MAPPING]</h1>
       <div id='input' spellcheck="false" contenteditable=""></div>
     </div>
     <script src="./js/mapping.js"></script>
